# plse_v2

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
patterns/: algorithmic_sort.yaml  analysis_hierarchical_search.yaml  analysis_hypothesis_testing.yaml  metaprogramming_code_generator.yaml  ml_concepts_classification_metrics.yaml  mlops_compile_cpp_dependency.yaml  mlops_fastapi_model_serving.yaml  mlops_model_quantization_pipeline.yaml  mlops_multi_seed_runner.yaml  mlops_robust_path_locator.yaml  mlops_stratified_install.yaml  nlp_preprocessing_pipeline.yaml  nlp_vocabulary_builder.yaml  plse_meta_paired_pattern_generator.yaml  plse_meta_pattern_generator.yaml  project_setup_environment.yaml  python_concurrency_threading_vs_multiprocessing_tradeoff.yaml  python_core_argparse.yaml  python_core_classes.yaml  python_core_conditionals.yaml  python_core_custom_exceptions.yaml  python_core_dictionary_methods.yaml  python_core_error_handling.yaml  python_core_file_io.yaml  python_core_functions.yaml  python_core_list_tuple_basics.yaml  python_core_loops.yaml  python_core_string_manipulation.yaml  python_datastructures_data_classes_tradeoff.yaml  python_performance_list_vs_generator_tradeoff.yaml  python_philosophy_eafp_vs_lbyl_tradeoff.yaml  python_stdlib_collections.yaml  python_stdlib_itertools.yaml  python_stdlib_logging.yaml  python_stdlib_specialized_collections_tradeoff.yaml  pytorch_custom_loss_function.yaml  pytorch_custom_transform.yaml  pytorch_gradient_clipping.yaml  pytorch_hybrid_pso_layer.yaml  pytorch_learning_rate_scheduler.yaml  (+14 more)
patterns/anti_patterns/: core_python_broad_exceptions.yaml  core_python_inefficient_file_read.yaml  core_python_inefficient_membership_test.yaml  core_python_mutable_default_args.yaml  core_python_non_pythonic_loop.yaml  core_python_not_using_generators.yaml  core_python_not_using_slots.yaml  core_python_unnecessary_object_creation_in_loop.yaml  ml_data_leakage_preprocessing.yaml  mlops_anti_pattern_no_version_control_for_data.yaml  mlops_anti_pattern_training_serving_skew.yaml  mlops_unpinned_dependencies.yaml  pandas_chained_assignment.yaml  pandas_iterrows_inefficiency.yaml  pytorch_anti_pattern_confusing_eval_and_no_grad.yaml  pytorch_device_mismatch.yaml  pytorch_missing_model_eval.yaml  pytorch_missing_no_grad.yaml
patterns/orchestration/: api_fastapi_inference_service.yaml  cli_argparse_data_processor.yaml  devops_docker_compose.yaml  devops_dockerfile.yaml  devops_github_actions_ci.yaml  devops_pyproject_toml.yaml  ml_pipeline_evaluation_script.yaml  ml_pipeline_prediction_script.yaml  ml_pipeline_train_script.yaml
patterns/patterns/: python_core_comprehensions.yaml
scripts/: lint_patterns.py  list_patterns.py
src/plse/: __init__.py  generator.py  linter.py  patterns.py  registry.py  schema.py  validate_patterns.py  validation.py
