[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plse"
version = "2.0.0"
description = "A modern synthetic code generation engine for LLM training."
authors = [
  { name = "Jonathan R Belanger", email = "jonathan.r.belanger@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "autopep8",      # For code formatting
    "pyyaml",        # For loading pattern files
    "pylint",        # For deep code analysis in validation
    "flake8",        # For style and linting in validation
    "mypy"           # For static type checking in validation
]

[project.urls]
"Homepage" = "https://github.com/jonathanrbelanger-lang/plse_v2"
"Bug Tracker" = "https://github.com/jonathanrbelanger-lang/plse_v2/issues"
