[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plse"
version = "2.0.0"
description = "A modern synthetic code generation engine for LLM training."
authors = [
  { name = "Jonathan R Belanger", email = "jonathan.r.belanger@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "flake8>=6.0",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "pandas>=2.0",
    "torch>=2.0",
    "torchvision",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "Pillow", # Note: The PIL requirement is met by the Pillow package
    "joblib",
    "toml",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/jonathanrbelanger-lang/plse_v2"
"Bug Tracker" = "https://github.com/jonathanrbelanger-lang/plse_v2/issues"
