[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plse"
version = "2.0.0"
description = "Python Latent Space Explorer v2.0"
authors = [
  { name = "Jonathan Belanger", email = "jonathan.r.belanger@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "flake8>=6.0",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "pandas>=2.0",
    "torch>=2.0",
    "torchvision",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "Pillow",
    "joblib",
    "toml",
    "pytest",
    "libcst>=1.0",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/jonathanrbelanger-lang/plse-v2"
"Bug Tracker" = "https://github.com/jonathanrbelanger-lang/plse-v2/issues"
